--- a/lib_cpi/Cargo.toml
+++ b/lib_cpi/Cargo.toml
@@ -2,6 +2,8 @@
 name = "lib_cpi"
 version = "0.1.0"
 edition = "2024"
+license = "MIT"
+description = "A library for generating CPIs for OmniCloud."
 
 [dependencies]
 serde_json = { version = "1.0.140", features = ["preserve_order"] }
