--- a/lib_cpi_macros/Cargo.toml
+++ b/lib_cpi_macros/Cargo.toml
@@ -2,6 +2,8 @@
 name = "lib_cpi_macros"
 version = "0.1.0"
 edition = "2024"
+license = "MIT"
+description = "A library for generating CPIs for OmniCloud."
 
 [dependencies]
 quote = { version = "1.0.40", features = ["proc-macro"] }
