--- a/lib_cpi/Cargo.toml
+++ b/lib_cpi/Cargo.toml
@@ -8,4 +8,4 @@ description = "A library for generating CPIs for OmniCloud."
 [dependencies]
 serde_json = { version = "1.0.140", features = ["preserve_order"] }
 serde = { version = "1.0.140", features = ["derive"] }
-lib_cpi_macros = { path = "../lib_cpi_macros" }
+lib_cpi_macros = "0.1.0"
