--- a/lib_cpi_macros/Cargo.toml
+++ b/lib_cpi_macros/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "lib_cpi_macros"
-version = "0.3.0"
+version = "0.4.0"
 edition = "2024"
 license = "MIT"
 description = "A library for generating CPIs for OmniCloud."
 
 [dependencies]
 quote = { version = "1.0.40", features = ["proc-macro"] }
-syn = { version = "2.0.101", features = ["full"] }
+syn = { version = "2.0.101", features = ["full", "derive"] }
 lazy_static = { version = "1.4.0" }
 
 [lib]
